--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,16 +3,10 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>HENRY.IO</title>
+    <title>splines.io</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <!-- CSS -->
-    <!-- <link rel="stylesheet" href="css/main.css" /> -->
-    <!-- Audio -->
-    <audio id="split_cell" src="audio/split.mp3"></audio>
-    <audio id="spawn_cell" src="audio/spawn.mp3"></audio>
 </head>
 <body>
-    <!-- JS -->
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/app.js"></script>
 </body>
